retrieveUnpackaged/objects/Service_Address__c.object
<CustomObject>
    <fields>
        <fullName>Application_Due1__c</fullName>
        <label>Application Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Due2__c</fullName>
        <label>Application Due2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Due3__c</fullName>
        <label>Application Due3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date1__c</fullName>
        <label>Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date2__c</fullName>
        <label>Concept Paper Due Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date3__c</fullName>
        <label>Concept Paper Due Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Different_from_Organization_address__c</fullName>
        <inlineHelpText>Is Service Address different from Organization Address</inlineHelpText>
        <label>Different from Organization address?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_Specify_the_address__c</fullName>
        <label>If Yes,Specify the address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date1__c</fullName>
        <label>Project End Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date2__c</fullName>
        <label>Project End Due Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Due_Date3__c</fullName>
        <label>Project End Due Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Due_Date_4__c</fullName>
        <label>Project End Due Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date1__c</fullName>
        <label>Project Start Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date2__c</fullName>
        <label>Project Start Due Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date3__c</fullName>
        <label>Project Start Due Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Due_Date_4__c</fullName>
        <label>Project Start Due Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Atlantic Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Central Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwestern Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Round</label>
        <picklist>
            <picklistValues>
                <fullName>Round 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Address</label>
    <nameField>
        <label>Reg ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>